<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 通用 -->
    <string name="app_name">骄阳视频</string>
    <string name="tip">提示</string>
    <string name="back">返回</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="menu_delete">删除</string>
    <string name="quit">退出</string>
    <string name="quit_info">是否退出骄阳视频?</string>
    <string name="common_movie_type">类型 : %1$s</string>
    <string name="common_movie_year">年份 : %1$s</string>
    <string name="widget_updatefailed">更新失败</string>
    <string name="apk_update_failure">获取更新信息失败</string>
    <string name="no_sdcard_tips">SD卡未安装，请安装好SD卡再进行此操作</string>
    <string name="progress_tips">提示</string>
    <string name="getting_update_info">正在获取更新信息．．．</string>
    <string name="software_update">软件更新</string>
    <string name="check_update">检查更新</string>
    <string name="update">更新</string>
    <string name="loading">数据加载中&#8230;</string>
    <string name="please_select_quality">请选择清晰度</string>
    <string name="player_onloading">正在读取视频信息</string>
    <string name="profile_smooth">流畅 (360P)</string>
    <string name="profile_base">标清 (480P)</string>
    <string name="profile_high">高清 (720P)</string>
    <string name="profile_super">超清 (1080P)</string>
    <string name="unknown">未知</string>
    <string name="tips_unsupport_download">本片不提供下载</string>
    <string name="player_onChange_quality">正在切换清晰度</string>
    <string name="tops_no_network">当前没有可用网络</string>
    <string name="tips_add_to_my_video">已添加到【个人中心-下载】</string>
    <string name="tips_play_error_with_network_error">播放失败，请检查网络</string>
    <string name="user_center">个人中心</string>
    <string name="common_movie_score">评分：</string>
    <string name="descreption">描述</string>
    <string name="fresh">刷新</string>
    <string name="none">无</string>

    <!-- 历史播放 -->
    <string name="user_center_count">(%1$s)</string>
    <string name="history_play">最近观看</string>
    <string name="no_history">暂无任何观看记录</string>
    <string name="user_center_delete_tip">请选择要删除的影片</string>
    <!-- 收藏 -->
    <string name="favorite">收藏</string>
    <string name="no_favorite">还没有收藏内容</string>
    <string name="clear">清空</string>
    <!-- 搜索 -->
    <string name="search">搜索</string>
    <string name="everyone_search">大家都在搜：</string>
    <string name="editor_recommend">编辑推荐：</string>
    <string name="little_tip">小提示：</string>
    <!-- 设置 -->
    <string name="setting">设置</string>
    <string name="search_title">搜索</string>
    <string name="auto_play_next">自动连续播放</string>
    <string name="auto_skip">跳过片头片尾</string>
    <string name="setting_proportion">画 面 比 例</string>
    <string name="setting_decoder">解 码 设 置</string>
    <string name="auto">自动</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="closed">关闭</string>
    <string name="auto_fullscreen">自动全屏</string>
    <string name="original_proportion">原始比例</string>
    <string name="profile_1080p">1080p</string>
    <string name="profile_720p">720p</string>
    <string name="profile_blue">蓝光</string>
    <string name="profile_3d">3D</string>
    <string name="decoder_soft">软解优先</string>
    <string name="decoder_hard">硬解优先</string>
    <string name="get_data_failed">联网失败，请稍后重试</string>
    <string name="current_version">当前版本V%s</string>
    <string name="play_setting">播放设置</string>


    <!-- 导航栏 -->
    <string name="video_movie">电影</string>
    <string name="video_tv">电视剧</string>
    <string name="video_anim">动漫</string>
    <string name="video_entertainment">综艺</string>
    <string name="detail_recommend_title">看过本影片的观众还看过</string>

    <!-- 列表页 -->
    <string name="channel_has_reached_end">没有更多视频啦</string>
    <string name="channel_loading_more">正在加载&#8230;</string>
    <string name="empty_sorry_no_such_film">抱歉,暂无符合条件的影片</string>
    <string name="channel_failed_to_get_movies">加载失败</string>

    <!-- 列表页条件过滤 -->
    <string name="filter">筛选</string>
    <string name="filter_sort">选择排序</string>
    <string name="filter_sort_new">最新</string>
    <string name="filter_sort_hot">最热</string>
    <string name="filter_sort_good">好评</string>
    <string name="filter_category">选择类型</string>
    <string name="filter_year">选择年份</string>
    <string name="filter_area">选择地区</string>

    <!-- 播放器 -->
    <string name="player_error_tips_title">无法获取视频信息,建议你重新加载,或退出选择其它影片进行播放</string>
    <string name="player_error_tips_reload">重新加载</string>
    <string name="player_profile_360p">360P</string>
    <string name="player_profile_480p">480P</string>
    <string name="player_profile_720p">720P</string>
    <string name="player_profile_1080p">1080P</string>
    <string name="player_playtime_default">00:00:00</string>
    <string name="VideoView_error_text_invalid_progressive_playback" msgid="3186670335938670444">"抱歉，该视频不适>合在此设备上播放。"</string>
    <string name="VideoView_error_text_unknown" msgid="3450439155187810085">"无法播放此视频。"</string>
    <string name="VideoView_error_button" msgid="2822238215100679592">"确定"</string>

    <!-- 详情页 -->
    <string name="play">播放</string>
    <string name="choice">选集</string>
    <string name="no_more_episodes">没有更多选集哦~~</string>
    <string name="get_new_version">发现新版本：</string>
    <string name="ignore_version">忽略该版本</string>

    <!-- empty view indicate -->
    <string name="empty_content">没有找到相关内容</string>

    <!-- tips -->
    <string name="tip_no_authority">对不起，由于版权原因，您所在地区不能播放或下载</string>
    <string name="download">下载</string>
    <string name="tips_unsurport_for_play">该影片尚不支持在您的机器上播放</string>



</resources>
