<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/user_center_item_width"
    android:layout_height="@dimen/user_center_item_height"
    android:focusable="true" >

    <ImageView
        android:id="@+id/center_poster"
        android:layout_width="@dimen/user_center_item_width"
        android:layout_height="@dimen/user_center_item_height"
        android:contentDescription="@string/descreption"
        android:focusable="false"
        android:scaleType="fitXY"
        android:src="@drawable/user_center_bg" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/user_center_item_bg_height"
        android:layout_alignBottom="@id/center_poster"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/center_poster"
        android:background="@drawable/user_center_item_bg"
        android:padding="@dimen/user_center_item_bg_padding" >

        <ImageView
            android:id="@+id/center_icon"
            android:layout_width="@dimen/user_center_item_bg_height"
            android:layout_height="@dimen/user_center_item_bg_height"
            android:layout_centerVertical="true"
            android:src="@drawable/user_center_playrecord" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/center_icon"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/center_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_play"
                android:textSize="@dimen/user_center_title_textSize" />

            <TextView
                android:id="@+id/center_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/center_title"
                android:text="@string/user_center_count"
                android:textSize="@dimen/user_center_count_textSize" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/center_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#c0000000"
        android:padding="@dimen/user_center_speed_padding"
        android:text="Medium Text"
        android:textSize="@dimen/user_center_speed_textSize"
        android:visibility="gone" />

</RelativeLayout>