<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <!-- 标题 -->

    <TextView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_channel_back_icon_margin_bottom"
        android:layout_marginLeft="@dimen/fragment_channel_back_icon_margin_left"
        android:drawablePadding="@dimen/fragment_channel_back_icon_drawable_padding"
        android:focusable="false"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fragment_channel_back_icon_text_size" />

    <ImageView
        android:id="@+id/menu_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/fragment_channel_menutips_margin_bottom"
        android:layout_marginLeft="@dimen/fragment_channel_menutips_margin_left"
        android:focusable="false"
        android:src="@drawable/menu_more_function" />

    <!-- 频道内容 -->

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/back_icon"
        android:descendantFocusability="afterDescendants" >

        <LinearLayout
            android:id="@+id/nav"
            android:layout_width="@dimen/movielist_nav_item_width"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp" >

            <RelativeLayout
                android:id="@+id/filter_panel"
                android:layout_width="@dimen/movielist_nav_item_width"
                android:layout_height="@dimen/movielist_nav_item_height"
                android:background="@drawable/movielist_nav_item_selector"
                android:gravity="center_horizontal" >

                <ImageView
                    android:id="@+id/filter_icon"
                    android:layout_width="@dimen/movielist_nav_filter_icon_width"
                    android:layout_height="@dimen/movielist_nav_filter_icon_width"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/movielist_filter" />

                <TextView
                    android:id="@+id/tv_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:layout_toRightOf="@id/filter_icon"
                    android:text="@string/filter"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/filter_font_title" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/arrow_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/descreption"
                android:src="@drawable/movielist_arrow_up" />

            <ListView
                android:id="@+id/nav_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:choiceMode="singleChoice"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:listSelector="@drawable/movielist_nav_item_selector"
                android:scrollbars="none" />

            <ImageView
                android:id="@+id/arrow_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/descreption"
                android:src="@drawable/movielist_arrow_down" />
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/nav"
            android:background="@drawable/movielist_line" />

        <LinearLayout
            android:id="@+id/channel_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/line"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/movielist_nav_item_height" >

                <TextView
                    android:id="@+id/movielist_tv_filtergroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="#80000000"
                    android:layout_centerVertical="true"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:singleLine="true"
                    android:text="最新"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/filter_font_item" />
            </RelativeLayout>

            <GridView
                android:id="@+id/gv_channel_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:choiceMode="singleChoice"
                android:fadeScrollbars="false"
                android:gravity="center_horizontal"
                android:listSelector="@android:color/transparent"
                android:numColumns="5"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarThumbVertical="@drawable/scrollbar"
                android:stretchMode="columnWidth"
                android:visibility="gone" />

            <!-- 更多 -->

            <LinearLayout
                android:id="@+id/channel_loading_more_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/fragment_channel_loading_padding_bottom"
                android:paddingTop="@dimen/fragment_channel_loading_padding_top"
                android:visibility="gone" >

                <ProgressBar
                    android:id="@+id/pb_channel_loading_more"
                    android:layout_width="@dimen/fragment_channel_loading_pb_w"
                    android:layout_height="@dimen/fragment_channel_loading_pb_h" />

                <TextView
                    android:id="@+id/tv_channel_loading_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fragment_channel_loading_txt_margin_left"
                    android:text="@string/channel_loading_more"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <!-- 加载失败时显示的界面 -->

    <include
        android:id="@+id/empty_view"
        layout="@layout/empty_view"
        android:visibility="gone" />

    <!-- 没有符合筛选条件影片时显示的界面 -->

    <RelativeLayout
        android:id="@+id/channel_not_found_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/empty_sorry_no_such_film"
            android:textColor="#9d9e9e"
            android:textSize="@dimen/fragment_channel_empty_text" />
    </RelativeLayout>

    <!-- 加载完列表内容前显示的界面 -->

    <ProgressBar
        android:id="@+id/channel_loading_progress"
        android:layout_width="@dimen/fragment_channel_loading_pb_w"
        android:layout_height="@dimen/fragment_channel_loading_pb_h"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>